--- a/backend/src/services/email_templates/invitationToPatch.html
+++ b/backend/src/services/email_templates/invitationToPatch.html
@@ -1,7 +1,4 @@
-
-const passwordResetEmail = 
-
-`<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -534,4 +531,4 @@ const passwordResetEmail =
       </tr>
     </table>
   </body>
-</html>`
+</html>
