--- a/backend/src/services/email_templates/passwordReset.html
+++ b/backend/src/services/email_templates/passwordReset.html
@@ -57,37 +57,42 @@ h3 {
     </style>
   <![endif]-->
   </head>
-  <body style="height: 100%; margin: 0; -webkit-text-size-adjust: none; font-family: Helvetica, Arial, sans-serif; background-color: #F4F4F7; color: #51545E; width: 100%;">
-    <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; height: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background: linear-gradient(315deg, rgb(93, 33, 122) 0%, rgb(60, 19, 93) 22%, rgb(60, 19, 93) 47%, rgb(95, 36, 122) 83%, rgb(154, 64, 170) 100%);" bgcolor="#53317c">
+  <body style="height: 100%; margin: 0; -webkit-text-size-adjust: none; font-family: Helvetica, Arial, sans-serif; background-color: #f9f8f8; color: #51545E; width: 100%;">
+    <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; height: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #f9f8f8;" bgcolor="#f9f8f8">
       <tr>
         <td align="center" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px;">
-          <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0;">
+          <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; height: 12px; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0;">
             <tr>
-              <td class="email-masthead" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; padding: 25px 0; text-align: center; font-size: 48px;" align="center">
-                <a href="https://getpatch.org" class="f-fallback email-masthead_logo" style="color: #FFF; text-decoration: none;">
-                    <img src="https://getpatch.org/img/logo@2x.png" alt="Patch" style="border: none; vertical-align: middle; width: 180px;" width="180"></a>
-              </td>
-            </tr>
+                <td class="email-masthead" style="height: 24px;" align="center">
+                </td>
+              </tr>
             <!-- Email Body -->
             <tr>
-              <td class="email-body" width="100%" cellpadding="0" cellspacing="0" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; width: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #FFFFFF;" bgcolor="#FFFFFF">
+              <td class="email-body" width="100%" cellpadding="0" cellspacing="0" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; width: 100%; margin: 0; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #f9f8f8;" bgcolor="#f9f8f8">
                 <table class="email-body_inner" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation" style="width: 570px; margin: 0 auto; padding: 0; -premailer-width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; background-color: #FFFFFF;" bgcolor="#FFFFFF">
+                    <tr>
+                        <td class="email-masthead" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; padding: 0; text-align: center; font-size: 48px; height: 18px; background: linear-gradient(315deg, rgb(93, 33, 122) 0%, rgb(60, 19, 93) 22%, rgb(60, 19, 93) 47%, rgb(95, 36, 122) 83%, rgb(154, 64, 170) 100%);" align="center">
+                          <!-- <a href="https://getpatch.org" class="f-fallback email-masthead_logo" style="color: #FFF; text-decoration: none;">
+                              <img src="https://getpatch.org/img/logo@2x.png" alt="Patch" style="border: none; vertical-align: middle; width: 180px;" width="180"></a>
+                          -->
+                        </td>
+                      </tr>
                   <!-- Body content -->
+
                   <tr>
                     <td class="content-cell" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; padding: 35px;">
                       <div class="f-fallback">
                         <h1 style="margin-top: 0; color: #333333; font-size: 22px; font-weight: bold; text-align: left;">Let's get you back to Patch</h1>
-                        <p style="margin: .4em 0 1.1875em; font-size: 16px; line-height: 1.625; color: #51545E;">To reset the password for <a style="color: #111; text-decoration: none; font-weight:700;">{{email}}</a>, click the button below and pick a new password.</p>
-                        <p style="margin: .4em 0 1.1875em; font-size: 16px; line-height: 1.625; color: #51545E;">
+                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">To reset the password for <a style="color: #111; text-decoration: none; font-weight:700;">{{email}}</a>, click the button below and pick a new password.</p>
+                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">
                             <!-- Action -->
                             <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; margin: 30px auto; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center;">
                             <tr>
                                 <td align="center" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px;">
-                                <!-- Border based button https://litmus.com/blog/a-guide-to-bulletproof-buttons-in-email-design -->
                                 <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                     <tr>
                                     <td align="center" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px;">
-                                        <a href="{{link}}" class="f-fallback button" target="_blank" style="background-color: #53317c; border-top: 14px solid #53317c; border-right: 48px solid #53317c; border-bottom: 14px solid #53317c; border-left: 48px solid #53317c; display: inline-block; color: #FFF; text-decoration: none; border-radius: 99px; box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16); -webkit-text-size-adjust: none; box-sizing: border-box;">Reset password</a>
+                                        <a href="{{link}}" class="f-fallback button" target="_blank" style="background-color: #5f247a; border-top: 14px solid #5f247a; border-right: 48px solid #5f247a; border-bottom: 14px solid #5f247a; border-left: 48px solid #5f247a; display: inline-block; color: #FFF; text-decoration: none; border-radius: 99px; box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16); -webkit-text-size-adjust: none; box-sizing: border-box;">Reset password</a>
                                     </td>
                                     </tr>
                                 </table>
@@ -96,14 +101,14 @@ h3 {
                             </table>
                         </p>
 
-                        <p style="margin: .4em 0 1.1875em; font-size: 16px; line-height: 1.625; color: #51545E;">If you didn't request this, simply ignore this message. If you need more help, <a href="mailto:help@getpatch.org" style="color: #51545E;">contact our customer support team</a> and we'll get back to you as soon as we can.</p>
+                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">If you didn't request this, simply ignore this message. If you need more help, <a href="mailto:help@getpatch.org?subject=Sign in help for {{email}}" style="color: #51545E;">contact our customer support team</a> and we'll get back to you as soon as we can.</p>
 
                         <!-- Sub copy -->
                         <table class="body-sub" role="presentation" style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #EAEAEC;">
                           <tr>
                             <td style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px;">
-                              <p class="f-fallback sub" style="margin: .4em 0 1.1875em; line-height: 1.625; font-size: 14px; color: #81848d;">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
-                              <p class="f-fallback sub" style="margin: .4em 0 1.1875em; line-height: 1.625; font-size: 14px; color: #81848d !important;  text-decoration: none;"><a href="{{link}}" style="color: #81848d; text-decoration: none;">{{link}}</a></p>
+                              <p class="f-fallback sub" style="margin: .5em 0 0; line-height: 1.5; font-size: 14px; color: #81848d;">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
+                              <p class="f-fallback sub" style="margin: .5em 0 0; line-height: 1.5; font-size: 14px; color: #81848d !important;  text-decoration: none;"><a href="{{link}}" style="color: #81848d; text-decoration: none;">{{link}}</a></p>
                             </td>
                           </tr>
                         </table>
@@ -114,12 +119,12 @@ h3 {
               </td>
             </tr>
             <tr>
-              <td style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; background-color: #eceaec;">
+              <td style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; background-color: #f9f8f8;">
                 <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation" style="width: 570px; margin: 0 auto; padding: 0; -premailer-width: 570px; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center;">
                   <tr>
                     <td class="content-cell" align="center" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; padding: 35px;">
-                      <p class="f-fallback sub align-center" style="margin: .4em 0 1.1875em; line-height: 1.625; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">&copy; 2022 Raheem. All rights reserved.</p>
-                      <p class="f-fallback sub align-center" style="margin: .4em 0 1.1875em; line-height: 1.625; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">
+                      <p class="f-fallback sub align-center" style="margin: .5em 0 1em; line-height: 1.5; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">&copy; 2022 Raheem. All rights reserved.</p>
+                      <p class="f-fallback sub align-center" style="margin: .5em 0 1em; line-height: 1.5; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">
                         Raheem
                         <br>1423 Broadway, #192
                         <br>Oakland, CA 94612
