--- a/backend/src/services/email_templates/passwordReset.html
+++ b/backend/src/services/email_templates/passwordReset.html
@@ -82,8 +82,8 @@ h3 {
                   <tr>
                     <td class="content-cell" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; padding: 35px;">
                       <div class="f-fallback">
-                        <h1 style="margin-top: 0; color: #333333; font-size: 22px; font-weight: bold; text-align: left;">Let's get you back to Patch</h1>
-                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">To reset the password for <a style="color: #111; text-decoration: none; font-weight:700;">{{email}}</a>, click the button below and pick a new password.</p>
+                        <h1 style="margin-top: 0; color: #333333; font-size: 22px; font-weight: bold; text-align: left;">Let's get you back to Patch, {{name}}</h1>
+                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">Click the button below to set a new password for <a style="color: #111; text-decoration: none; font-weight:500;">{{email}}</a>.</p>
                         <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">
                             <!-- Action -->
                             <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; margin: 30px auto; padding: 0; -premailer-width: 100%; -premailer-cellpadding: 0; -premailer-cellspacing: 0; text-align: center;">
@@ -101,13 +101,13 @@ h3 {
                             </table>
                         </p>
 
-                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">If you didn't request this, simply ignore this message. If you need more help, <a href="mailto:help@getpatch.org?subject=Sign in help for {{email}}" style="color: #51545E;">contact our customer support team</a> and we'll get back to you as soon as we can.</p>
+                        <p style="margin: .5em 0 1em; font-size: 16px; line-height: 1.5; color: #51545E;">If you didn't request this, simply ignore this message. For more help, <a href="mailto:help@getpatch.org?subject=Sign in help for {{email}}" style="color: #51545E;">contact us</a>.</p>
 
                         <!-- Sub copy -->
                         <table class="body-sub" role="presentation" style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #EAEAEC;">
                           <tr>
                             <td style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px;">
-                              <p class="f-fallback sub" style="margin: .5em 0 0; line-height: 1.5; font-size: 14px; color: #81848d;">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
+                              <p class="f-fallback sub" style="margin: .5em 0 0; line-height: 1.5; font-size: 14px; color: #81848d;">If you’re having trouble with the button above, copy and paste this URL into your <b>phone's</b> web browser:</p>
                               <p class="f-fallback sub" style="margin: .5em 0 0; line-height: 1.5; font-size: 14px; color: #81848d !important;  text-decoration: none;"><a href="{{link}}" style="color: #81848d; text-decoration: none;">{{link}}</a></p>
                             </td>
                           </tr>
@@ -124,7 +124,7 @@ h3 {
                   <tr>
                     <td class="content-cell" align="center" style="word-break: break-word; font-family: Helvetica, Arial, sans-serif; font-size: 16px; padding: 35px;">
                       <p class="f-fallback sub align-center" style="margin: .5em 0 1em; line-height: 1.5; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">&copy; 2022 Raheem. All rights reserved.</p>
-                      <p class="f-fallback sub align-center" style="margin: .5em 0 1em; line-height: 1.5; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35);">
+                      <p class="f-fallback sub align-center" style="margin: .5em 0 1em; line-height: 1.5; text-align: center; font-size: 14px; color: rgba(0,0,0,0.35) !important;">
                         Raheem
                         <br>1423 Broadway, #192
                         <br>Oakland, CA 94612
